# chronocratic-models

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  ruff.toml
.github/workflows/: auto-changelog-fragment.yml  build-and-test.yml  ff-merge-check.yml  ff-merge-do.yml  main-pre-merge-gate.yml  pre-merge-gate.yml  pypi-publish.yml  release-notes.yml  release-prep.yml  sync-dev-after-main-merge.yml
.planning/: HANDOFF.json  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/discussion_prompts/: tstcc_supervised_mode.md
.planning/graphs/: .last-build-snapshot.json  GRAPH_REPORT.md  graph.html  graph.json
.planning/milestone-01/phase-05/: DEPENDENCIES.md
.planning/phases/01-augmentation-producer-contract/: .continue-here.md  01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-04-PLAN.md  01-04-SUMMARY.md  01-05-PLAN.md  01-05-SUMMARY.md  01-06-PLAN.md  01-06-SUMMARY.md  01-07-PLAN.md  01-07-SUMMARY.md  01-08-PLAN.md  01-08-SUMMARY.md  01-09-PLAN.md  01-09-SUMMARY.md  01-10-PLAN.md  01-10-SUMMARY.md  01-11-PLAN.md  01-11-SUMMARY.md  01-12-PLAN.md  01-12-SUMMARY.md  01-13-PLAN.md  01-13-SUMMARY.md  01-14-PLAN.md  01-14-SUMMARY.md  01-15-PLAN.md  01-15-SUMMARY.md  SPEC.md  (+7 more)
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
.planning/todos/: enc-dec-infra.md
changelog.d/: 20.added.md  20.changed.md  21.changed.md  25.added.md  26.fixed.md  31.changed.md  34.changed.md  39.changed.md  40.changed.md  43.added.md  46.fixed.md  51.added.md  53.added.md  53.changed.md  54.added.md  54.fixed.md  57.fixed.md  60.fixed.md  README.md
docs/: conf.py  contributing.md  index.md  quickstart.md
docs/_static/: custom.css
docs/api/: augmentation.md  conv_dilated.md  conv_standard.md  distances.md  generative.md  index.md  layers.md  mixins.md  models.md  protocols.md  recurrent.md  supervised.md  transformer.md
scripts/: check_device.sh
tests/: conftest.py  test_aug_config.py  test_aug_contract.py  test_aug_covariance.py  test_aug_cross_model.py  test_aug_decorators.py  test_aug_primitives.py  test_aug_producers.py  test_aug_trainable_support.py  test_augmentation.py  test_augmentation_base.py  test_augmentation_per_model.py  test_autotcl_producer.py  test_config.py  test_config_hierarchy.py  test_configs_reexport.py  test_cost_producer.py  test_device_compat.py  test_device_crash_fixes.py  test_device_fixes_red.py  test_encoder_decoder_contract.py  test_from_config.py  test_mixin.py  test_smoke.py  test_timevae_config_rename.py  test_ts2vec_producer.py  test_tstcc_producer.py  test_vae_base_rename.py
tests/integration/: test_finetuning_integration.py  test_supervised_integration.py
tests/unit/: test_aug_cross_model.py  test_aug_decorators.py  test_aug_primitives.py  test_augmentation.py  test_autotcl_augmentation.py  test_backbone_representation_dim.py  test_batch1_gradient.py  test_batch_size1_training_step.py  test_complex_models_2hook.py  test_config.py  test_config_hierarchy.py  test_cost_sequence_concat.py  test_cost_tier_a_output_shapes.py  test_device_filters.py  test_dilated_encoding_mixin.py  test_dilated_encoding_output.py  test_encode_batch.py  test_encoding_mixin.py  test_encoding_output_shape.py  test_encoding_output_shape_enum.py  test_finetuning_package.py  test_from_config.py  test_lstmae.py  test_mcl_config_and_encoder.py  test_mcl_norm_parameter.py  test_mixin.py  test_model_encode_batch.py  test_no_deleted_hooks.py  test_recurrent_autoencoder.py  test_recurrent_encode_output.py  test_series2vec_config_defaults.py  test_series2vec_distance_normalizer.py  test_series2vec_finetuning.py  test_series2vec_grouppnorm.py  test_series2vec_migration.py  test_series2vec_supervised.py  test_supervised_package.py  test_tier_c_sequence_warning.py  test_timenet_config.py  test_timenet_param_rename.py  (+15 more)
(+327 files in other folders)
