[build-system]
requires = ["setuptools>=68", "wheel"]

[project]
name = "tscollection-models"
version = "0.1.0"
requires-python = ">=3.12,<3.13"
dependencies = [
    "numpy>=2.1,<3.0.0",
    "pandas>=2.2.0",
    "scipy>=1.13.0",
    "scikit-learn>=1.6,<2.0.0",
    "lightning>=2.5,<3.0",
    "torch>=2.4,<3.0",
    "torchvision>=0.19.0",
    "torchaudio>=2.4.0",
    "joblib>=1.4.0",
    "openpyxl~=3.1.5",
    "h5py~=3.16.0",
    "einops>=0.8.2",
    "numba>=0.65.1",
]

[dependency-groups]
dev = [
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "ruff>=0.15.9",
    "ty>=0.0.28",
]

notebooks = [
    "notebook>=7.3",
    "jupyterlab>=4.3",
]

[tool.uv]
default-groups = ["dev"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
