[build-system]
requires = ["setuptools>=68", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "chronocratic-models"
dynamic = ["version"]
description = "Ready-to-use time series models implemented in PyTorch and Lightning."
readme = "README.md"
requires-python = ">=3.12"
license = "BSD-3-Clause"
license-files = ["LICENSE"]
keywords = [
    "time-series", "pytorch", "lightning", "machine-learning",
    "self-supervised-learning", "representation-learning",
    "forecasting", "classification", "regression", "anomaly-detection",
]
authors = [{name = "The Chronocratic Developers", email = "github@users.noreply.github.com"}]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "numpy>=2.1,<3.0.0",
    "scipy>=1.13.0",
    "lightning>=2.5,<3.0",
    "torch>=2.4,<3.0",
    "einops>=0.8.2",
    "numba>=0.65.1",
    "tqdm>=4.66.0",
]

[project.optional-dependencies]
docs = [
    "sphinx>=7.0",
    "pydata-sphinx-theme>=0.15",
    "myst-parser>=3.0",
]

[project.urls]
Homepage = "https://github.com/chronocratic/chronocratic-models"
Documentation = "https://chronocratic-models.readthedocs.io/"
Repository = "https://github.com/chronocratic/chronocratic-models"
Issues = "https://github.com/chronocratic/chronocratic-models/issues"

[dependency-groups]
dev = [
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "ruff>=0.15.9",
    "towncrier>=24.8",
    "ty>=0.0.28",
]

notebooks = [
    "notebook>=7.3",
    "jupyterlab>=4.3",
]

[tool.uv]
default-groups = ["dev"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]
version_file = "src/chronocratic/models/_version.py"
local_scheme = "no-local-version"
fallback_version = "0.1.0a1"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.towncrier]
package = "chronocratic.models"
package_dir = "src"
directory = "changelog.d"
filename = "CHANGELOG.md"
start_string = "<!-- towncrier release notes start -->\n"
title_format = "## v{version} ({project_date})"
issue_format = "[#{issue}](https://github.com/chronocratic/chronocratic-models/issues/{issue})"
underlines = ["", "", ""]

[[tool.towncrier.type]]
directory = "added"
name = "Added"
showcontent = true

[[tool.towncrier.type]]
directory = "changed"
name = "Changed"
showcontent = true

[[tool.towncrier.type]]
directory = "deprecated"
name = "Deprecated"
showcontent = true

[[tool.towncrier.type]]
directory = "removed"
name = "Removed"
showcontent = true

[[tool.towncrier.type]]
directory = "fixed"
name = "Fixed"
showcontent = true

[[tool.towncrier.type]]
directory = "security"
name = "Security"
showcontent = true
